tests/error/type_errors/or_not_bool_left.py
from tests.error.util import guppy


@guppy
def foo(x: bool) -> bool:
    return "xx" or x
